A: JVM 优化结束